crates/parser/src/snapshots/parser__tests__ok_test@0074_restricted_named_pat.ath.snap
---
source: crates/parser/src/tests.rs
description: "by-induction a { (foo as bar) => (!claim bar) }\n"
input_file: crates/parser/test_data/parser/inline/ok/ded/0074_restricted_named_pat.ath
---
INDUCT_DED
  BY_INDUCTION_KW "by-induction"
  WHITESPACE " "
  EXPR_PHRASE
    IDENT_EXPR
      IDENTIFIER
        IDENT "a"
        WHITESPACE " "
  L_CURLY "{"
  WHITESPACE " "
  RESTRICTED_MATCH_DED
    RESTRICTED_NAMED_PAT
      L_PAREN "("
      IDENTIFIER
        IDENT "foo"
        WHITESPACE " "
      AS_KW "as"
      WHITESPACE " "
      IDENT_PAT
        IDENTIFIER
          IDENT "bar"
      R_PAREN ")"
      WHITESPACE " "
    FAT_ARROW "=>"
    WHITESPACE " "
    BANG_METHOD_CALL_DED
      L_PAREN "("
      BANG "!"
      IDENT_EXPR
        IDENTIFIER
          IDENT "claim"
          WHITESPACE " "
      EXPR_PHRASE
        IDENT_EXPR
          IDENTIFIER
            IDENT "bar"
      R_PAREN ")"
      WHITESPACE " "
  R_CURLY "}"
  WHITESPACE "\n"

