crates/parser/src/snapshots/parser__tests__ok_test@0075_induct_multiple.ath.snap
---
source: crates/parser/src/tests.rs
description: "by-induction a { a => (!claim a) | b => (!claim b) }\n"
input_file: crates/parser/test_data/parser/inline/ok/ded/0075_induct_multiple.ath
---
INDUCT_DED
  BY_INDUCTION_KW "by-induction"
  WHITESPACE " "
  EXPR_PHRASE
    IDENT_EXPR
      IDENTIFIER
        IDENT "a"
        WHITESPACE " "
  L_CURLY "{"
  WHITESPACE " "
  RESTRICTED_MATCH_DED
    IDENT_PAT
      IDENTIFIER
        IDENT "a"
        WHITESPACE " "
    FAT_ARROW "=>"
    WHITESPACE " "
    BANG_METHOD_CALL_DED
      L_PAREN "("
      BANG "!"
      IDENT_EXPR
        IDENTIFIER
          IDENT "claim"
          WHITESPACE " "
      EXPR_PHRASE
        IDENT_EXPR
          IDENTIFIER
            IDENT "a"
      R_PAREN ")"
      WHITESPACE " "
  RESTRICTED_MATCH_DED
    PIPE "|"
    WHITESPACE " "
    IDENT_PAT
      IDENTIFIER
        IDENT "b"
        WHITESPACE " "
    FAT_ARROW "=>"
    WHITESPACE " "
    BANG_METHOD_CALL_DED
      L_PAREN "("
      BANG "!"
      IDENT_EXPR
        IDENTIFIER
          IDENT "claim"
          WHITESPACE " "
      EXPR_PHRASE
        IDENT_EXPR
          IDENTIFIER
            IDENT "b"
      R_PAREN ")"
      WHITESPACE " "
  R_CURLY "}"
  WHITESPACE "\n"

