crates/parser/src/snapshots/parser__tests__ok_test@0076_induct_ded.ath.snap
---
source: crates/parser/src/tests.rs
description: "by-induction foo { a => (!claim a) }\n"
input_file: crates/parser/test_data/parser/inline/ok/ded/0076_induct_ded.ath
---
INDUCT_DED
  BY_INDUCTION_KW "by-induction"
  WHITESPACE " "
  EXPR_PHRASE
    IDENT_EXPR
      IDENTIFIER
        IDENT "foo"
        WHITESPACE " "
  L_CURLY "{"
  WHITESPACE " "
  RESTRICTED_MATCH_DED
    IDENT_PAT
      IDENTIFIER
        IDENT "a"
        WHITESPACE " "
    FAT_ARROW "=>"
    WHITESPACE " "
    BANG_METHOD_CALL_DED
      L_PAREN "("
      BANG "!"
      IDENT_EXPR
        IDENTIFIER
          IDENT "claim"
          WHITESPACE " "
      EXPR_PHRASE
        IDENT_EXPR
          IDENTIFIER
            IDENT "a"
      R_PAREN ")"
      WHITESPACE " "
  R_CURLY "}"
  WHITESPACE "\n"

