crates/parser/src/snapshots/parser__tests__ok_test@0080_domains_complex_sort.ath.snap
---
source: crates/parser/src/tests.rs
description: "domains (List T), (Set U)\n"
input_file: crates/parser/test_data/parser/inline/ok/dir/0080_domains_complex_sort.ath
---
DOMAINS_DIR
  DOMAINS_KW "domains"
  WHITESPACE " "
  COMPOUND_SORT_DECL
    L_PAREN "("
    IDENT_SORT
      IDENTIFIER
        IDENT "List"
        WHITESPACE " "
    IDENT_SORT
      IDENTIFIER
        IDENT "T"
    R_PAREN ")"
  COMMA ","
  WHITESPACE " "
  COMPOUND_SORT_DECL
    L_PAREN "("
    IDENT_SORT
      IDENTIFIER
        IDENT "Set"
        WHITESPACE " "
    IDENT_SORT
      IDENTIFIER
        IDENT "U"
    R_PAREN ")"
    WHITESPACE "\n"

