crates/parser/src/snapshots/parser__tests__ok_test@0085_dir_stmt.ath.snap
---
source: crates/parser/src/tests.rs
description: "domain Foo\n"
input_file: crates/parser/test_data/parser/inline/ok/stmt/0085_dir_stmt.ath
---
DIR_STMT
  DOMAIN_DIR
    DOMAIN_KW "domain"
    WHITESPACE " "
    IDENT_SORT
      IDENTIFIER
        IDENT "Foo"
        WHITESPACE "\n"

